<resources>
    <string name="app_name">DGMobi CA</string>
    <string name="welcome">Welcome</string>
    <string name="dgsme">DGSMS</string>
    <string name="driver_name">Driver Name</string>
    <string name="version">VB.1.0.0.1</string>
    <string name="version_color">#000000</string>
    <string name="Btn_PickupList">PICKUP LIST</string>
    <string name="Btn_Deliver">Deliver</string>
    <string name="Btn_ERG">ERG</string>
    <string name="btn_Back">Back</string>
    <string name="btn_Exit">Exit</string>
    <string name="truck_number_color">#D2691E</string>
    <string name="Dialog_Ok">OK</string>
    <string name="Dialog_Forbidden_Title">Alert Message</string>
    <string name="Dialog_Forbidden_Message">Forbidden for Transport Under any Circumstance</string>
    <string name="Dialog_InvalidUn_Title">Invalid UN Number</string>
    <string name="Dialog_No_Placard_Title">No Placard Required</string>
    <string name="Dialog_Placard_Required_Title">Required Placard</string>
    <string name="Dialog_Placard_Required_Message">Place Following placard(s) on the Truck</string>
    <string name="Dialog_Placard_Required_Btn">Placard Added</string>
    <string name="Dialog_PlacardOff_Title">Remove Placard(s) from Truck</string>
    <string name="Dialog_1950_Title">UN 1950 Select Goods Type</string>
    <string name="Dialog_1950_Radio_Btn_Flammable">Flammable</string>
    <string name="Dialog_1950_Radio_Btn_NonF">Non-Flammable</string>
    <string name="Dialog_Add_Item_Et_UN">UN Number</string>
    <string name="Dialog_Add_Item_Btn_Lookup">Look Up</string>
    <string name="Dialog_Add_Item_Et_NetWeight">Net Weight</string>
    <string name="Dialog_Add_Item_Btn_RbPounds">Lbs</string>
    <string name="Dialog_Add_Item_TV_NetWt">No. of Pkgs</string>
    <string name="Dialog_Add_Item_TV_Gross">DG Gross Mass</string>
    <string name="Dialog_Add_Item_Btn_RbKgs">Kgs</string>
    <string name="Dialog_Add_Item_Hint_BL">enter bill of lading</string>
    <string name="Dialog_Add_Item_Hint_Erap">Enter ERAP</string>
    <string name="spinner_dialog_btn">Submit</string>
    <string name="no_Placards_main">No Placards Added</string>
    <string name="load_title">Loading Data .. Please Wait</string>
    <string name="staytunedtext">Takes few minutes to download the Transport Canada Rules \nPlease stay tuned..</string>
    <string name="alomstThere">Almost there...</string>
    <string name="workingonit">Working On It...</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="prompt">Select Company</string>
    <string name="license_data_imei">imei/mac address</string>
    <string name="license_data_name">Your name</string>
    <string name="license_data_contact">Contact Number</string>
    <string name="license_data_email">Email</string>
    <string name="license_data_terms">Accept Tems </string>
    <string name="btmSubmit">Submit</string>
    <string name="scan">Scanning..</string>
    <string name="Optimized">Optimized</string>
    <string name="SemiOptimized">Semi Optimized</string>
    <string name="NonOptimized">Non Optimized</string>
    <string name="title_activity_ergdisplay">ERGDisplay</string>
    <string name="SmallIsolation">Small Isolation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_in_app_billing">InAppBillingActivity</string>
    <string name="title_activity_show_all_frag">ShowAllFragAct</string>
    <string name="btn_quit">Quit</string>
    <string name="toast_payment_successful">Purchase successful.</string>
    <string name="toast_license_upgrade">License upgraded successfully</string>
    <string name="alert_msg_payment_failed">Payment is failed. Please check the card and other details and try again.</string>
    <string name="btn_proceed_payment">Proceed to Payment</string>
    <string name="alert_title">Alert Message</string>
    <string name="terms_check_box">I Accept</string>
    <string name="hint_coupon">Coupon Code</string>
    <string name="input_type_coupon">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_check">Check</string>
    <string name="alert_title_terms">Accept Terms and Conditions</string>
    <string name="alert_msg_buy_license">You need to buy license to use this app</string>
    <string name="coupon_check_box">I have a Coupon code</string>
    <string name="terms_check_click"><u>Terms and Conditions</u></string>
    <string name="tv_mobile_lost"><b>Transfer license to new mobile?</b></string>
    <string name="tv_mobile_lost_click">Click Here</string>
    <string name="alert_title_mobile_lost">Verification for license details</string>
    <string name="et_hint_email">Email</string>
    <string name="et_hint_username">Username</string>
    <string name="et_hint_password">Password</string>
    <string name="no_user_name">Username does not exist</string>
    <string name="btn_back">Back</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_submit">Submit</string>
    <string name="alert_msg_device_verification">Device verification or Selection</string>
    <string name="tv_web_link"><u>http://dgsms.ca</u></string>
    <string name="btn_delet_all">Delete All</string>
    <string name="btn_renew_now">Renew now</string>
    <string name="alert_msg_conn_nw">Please connect to Working Network</string>
    <string name="alert_verify_license">The application needs network connection to ensure that the system parameters are up-to-date. Please connect to the network.</string>
    <string name="alert_msg_license_expired">Your license is Expired. You need to renew the license to use the app.</string>
    <string name="btn_no">No</string>
    <string name="btn_yes">Yes</string>
    <string name="alert_msg_upgrade">Your license will expire on</string>
    <string name="alert_msg_extend">Would you like to extend the license now?</string>
    <string name="Menu_change_locale">Change Language</string>
    <string name="Toast_Selected_Language">Language set to English </string>
    <string name="Dialog_Category">Select Category</string>
    <string name="Dialog_Package_Group">Select Packing Group</string>
    <string name="Dialog_Sp84_Title">Select Type of Virus</string>
    <string name="Dialog_Do_Not_Accept_Load">Not Enough Placard Holders on the truck Do NOT accept load</string>
    <string name="Dialog_Message_Select_Orders">Select Order</string>
    <string name="Select_Description">Select Description</string>
    <string name="Title_Transaction_History">Transaction History</string>
    <string name="Dialog_LICENSE_VERIFY">Please Verify Your License></string>
    <string name="Dialog_Btn_Delete_Yes">Yes</string>
    <string name="btn_ok">OK</string>
    <string name="Dialog_Btn_Delete_No">No</string>
    <string name="Dialog_Btn_Exit">Exit</string>
    <string name="Dialog_Alert_Title">Alert Message</string>
    <string name="small_Isolation">small Isolation</string>
    <string name="small_Daypad">Small Daypad</string>
    <string name="small_Night_Pad">Small Night Pad</string>
    <string name="large_lsolation">Large Isolation</string>
    <string name="large_Day_Low_Pad">Large Day Low Pad</string>
    <string name="large_Day_Moderate_Pad">Large Day Moderate Pad</string>
    <string name="large_Day_High_Pad">Large Day High Pad</string>
    <string name="large_Night_Low_Pad">Large Night Low Pad</string>
    <string name="large_night_Moderate_Pad">Large Night Moderate Pad</string>
    <string name="large_Night_High_Pad">Large Night High Pad</string>
    <string name="large_Day_PAD">Large Day PAD</string>
    <string name="large_Night_Pad">Large Night Pad</string>
    <string name="Parameter">Parameter</string>
    <string name="S_I">S.I</string>
    <string name="Imperial">Imperial</string>
    <string name="Spill_Isolation_Distance">Spill Isolation Distance</string>
    <string name="spill_isolation_details"><u>SPILL ISOLATION DETAILS</u></string>
    <string name="tab1">EMERGENCY RESPONSE</string>
    <string name="tab2">PUBLIC SAFETY</string>
    <string name="tab3">POTENTIAL HAZARDS</string>
    <string name="first_aid">FIRST AID</string>
    <string name="FIRE">FIRE</string>
    <string name="spill_leak">SPILL OR LEAK</string>
    <string name="fire_expolosion">FIRE OR EXPLOSION</string>
    <string name="health">HEALTH</string>
    <string name="details">Details</string>
    <string name="protective_clothing">PROTECTIVE CLOTHING</string>
    <string name="evacuation">EVACUATION</string>
    <string name="Material">Material</string>
    <string name="No_ERG_Guide">Guide for the UN Number is not found</string>
    <string name="technical_error">Technical Error,Please Try again later</string>
    <string name="db_version">1.01</string>
    <string name="tv_notification_text">Please pick up your order</string>
    <string name="load_item">Load Item</string>
    <string name="show_placards">Show Placards</string>
    <string name="alert_msg_delete_all">Do you want to delete all shipments?</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_cancel">Cancel</string>
    <string name="unload_title">Do You Want to Unload Item?</string>
    <string name="No_Placards_Required_Message">Placard Not Required</string>
    <string name="back">Back</string>
    <string name="Exit">Exit</string>
    <string name="try_later">Please Try Again later</string>
    <string name="btn_assign">Assign</string>
    <string name="license_trans_fail">License Transfer Failed</string>
    <string name="connect_network">Please connect to Working Internet</string>
    <string name="pickup_order">Pick up Orders</string>
    <string name="optimise">OPTIMISED</string>
    <string name="semi_optimise">SEMI-OPTIMISED</string>
    <string name="non_optimise">NON-OPTIMISED</string>
    <string name="Placards_On_Truck_Message">These Placard(s) Must be on the Truck</string>
    <string name="UN_Number_4Ditgits_error">UN Number must be 4 digits</string>
    <string name="Dialog_Forbidden_Message1">Forbidden UN Number</string>
    <string name="Dialog_InvalidUn_Message">Invalid UN Number</string>
    <string name="Dialog_Add_Item_Tv_Residue">Is there residue in IBC ?</string>
    <string name="Menu_Show_Orders">Show Orders</string>
    <string name="Menu_History">History</string>
    <string name="Menu_Items_Quit">Quit</string>
    <string name="Dialog_Add_Item_Title">Add Item</string>
    <string name="Dialog_Add_Item_Et_BL">Enter Bill of Lading</string>
    <string name="Dialog_Add_Item_Et_Unumber">UN Number</string>
    <string name="TV_UN_Description">UN Description</string>
    <string name="Et_DG_Mass_Pkg">DG mass/pkg</string>
    <string name="TV_DG_Gross_Mass">DG Gross Mass</string>
    <string name="Et_No_Of_Pkg">No. of Pkgs</string>
    <string name="Et_ERAP">ERAP Number</string>
    <string name="Toast_No_Network">Please Connect To Working Internet Connection</string>
    <string name="Dialog_Add_Item_Btn_Scan">Scan</string>
    <string name="Rear_Camera_Unavailable">Rear Facing Camera Unavailable</string>
    <string name="Dialog_Add_Item_Btn_Display">Display Placard</string>
    <string name="trans_on_ship">Will this consignment be transported on a ship?</string>
    <string name="Please_Enter_Bill_OF_lad_error">Enter Bill of Lading</string>
    <string name="Dialog_Add_Item_Et_GRWeight">Enter Weight</string>
    <string name="Dialog_Add_Item_Et_Units">Enter No of Units</string>
    <string name="Dialog_Add_Item_Et_Erap">Enter ERAP</string>
    <string name="Please_Enter_Gross_Weight_error">Enter DG Gross Mass</string>
    <string name="Dialog_Add_Item_Tv_IBC">Is packing type an IBC ?</string>
    <string name="Toast_Message_No_Orders">Sorry, you Don\'t have any orders to pickup</string>
    <string name="alert_msg_apk_update">New version available, do you want to update?</string>
</resources>