<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/license_data_title"
         android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_dialog_title_bg"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" 
            android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/license_data_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/license_data_title"
        android:layout_margin="10dp"
        android:background="@drawable/round_edittext"
        android:gravity="center"
        android:hint="@string/license_data_name" />

    <EditText
        android:id="@+id/license_data_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/license_data_name"
        android:layout_margin="10dp"
        android:background="@drawable/round_edittext"
        android:gravity="center"
        android:hint="@string/license_data_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/license_data_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/license_data_email"
        android:layout_margin="10dp"
        android:background="@drawable/round_edittext"
        android:gravity="center"
        android:hint="@string/license_data_contact"
        android:inputType="number" />

    <Button
        android:id="@+id/license_data_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/license_data_contact"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_color_bg_orange"
        android:gravity="center"
        android:text="@string/prompt"
        android:drawableRight="@android:drawable/arrow_down_float"/>

    <Button
        android:id="@+id/license_data_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/license_data_spinner"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/btmSubmit" />

</RelativeLayout>