<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etUserName"
            android:hint="@string/et_hint_username"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:gravity="center"
            android:hint="@string/et_hint_password"
            android:inputType="textPassword"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etEmail"
            android:hint="@string/et_hint_email"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>
    </LinearLayout>

</RelativeLayout>