<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:background="@drawable/alert_dialog_title_bg"
        android:gravity="center_horizontal"
        android:id="@+id/Dialog_Two_Title"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/Dialog_Two_Message"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chHaveCoupon"
            android:layout_gravity="left"
            android:layout_height="35dp"
            android:layout_width="35dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvCoupon"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/coupon_check_box"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chTerms"
            android:layout_gravity="left"
            android:layout_height="35dp"
            android:layout_width="35dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/tvTerms"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/terms_check_box"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTermsCilck"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:text="@string/terms_check_click"
            android:textColor="@color/blue"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvText"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:id="@+id/tvCouponText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Coupon Valid"
            android:textColor="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:id="@+id/llCoupons"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:digits="@string/input_type_coupon"
            android:hint="@string/hint_coupon"
            android:id="@+id/etCoupon"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:maxLength="20" />

        <Button
            android:id="@+id/btnApply"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:text="@string/btn_apply" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:layout_gravity="left"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMobileLost"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/tv_mobile_lost"
            android:textColor="@color/black" />
        <android.support.v4.widget.Space
            android:layout_width="2dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvMobileLostClick"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_width="wrap_content"
            android:clickable="true"
            android:text="@string/tv_mobile_lost_click"
            android:textColor="@color/blue" />
    </LinearLayout>

    <LinearLayout
        android:background="#ffffff"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal">

        <Button
            android:background="@drawable/button_color_yes"
            android:clickable="true"
            android:id="@+id/Dialog_Two_No"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_width="100dp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <Button
            android:background="@drawable/button_color_yes"
            android:clickable="true"
            android:id="@+id/Dialog_Two_Yes"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_width="100dp"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>