<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rightLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvThreeTypes"
        android:background="@drawable/button_color_yes"
        android:textColor="@color/black"
        android:gravity="center" />
    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Optimized"
            android:background="@drawable/button_color_ok"
            android:textColor="@color/black"
            />
        <FrameLayout
            android:layout_below="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/frame_container1"
            android:layout_gravity="center_horizontal">

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay2"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv2"
            android:layout_below="@+id/frame_container1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SemiOptimized"
            android:background="@drawable/button_color_ok"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>
        <FrameLayout
            android:layout_below="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/frame_container2"
            android:layout_gravity="center_horizontal">

        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay3"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv3"
            android:layout_below="@+id/frame_container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NonOptimized"
            android:background="@drawable/button_color_ok"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"/>
        <FrameLayout
            android:layout_below="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/frame_container3"
            android:layout_gravity="center_horizontal">

        </FrameLayout>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:background="@drawable/button_color_ok"
        android:layout_gravity="bottom|right"
        android:id="@+id/btnBack"
        android:layout_margin="5dp"/>
</LinearLayout>